content/nomad/v1.4.x/content/docs/commands/license/get.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Nomad and the Nomad logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/nomad/blob/-/LICENSE

layout: docs
page_title: 'Commands: license get'
description: |
  The license get command is used to get the current license.
---

# Command: license get

The `license get` command is used to retrieve the current Nomad Enterprise
license. The command is not forwarded to the Nomad leader, and will return
the license from the specific server being contacted.

~> License commands are new in Nomad 0.12.0 and are only available with Nomad
Enterprise.

## Usage

```plaintext
nomad license get [options]
```

When ACLs are enabled, this command requires a token with the 'operator:read'
capability.

## General Options

@include 'general_options_no_namespace.mdx'

## Examples

```shell-session
$ nomad license get

Product        = nomad
License Status = valid
License ID     = e23f63b1-00ec-4e67-e926-c22e7937ceec
Customer ID    = 350356e5-8aec-bdf4-8510-b205079ccad2
Expires At     = 2020-05-09 00:00:00 +0000 UTC
License ID     = e23f63b1-00ec-4e67-e926-c22e7937ceec
Customer ID    = 350356e5-8aec-bdf4-8510-b205079ccad2
Terminates At  = 2020-05-10 00:00:00 +0000 UTC
Datacenter     = *
Modules:
        governance-policy
Licensed Features:
        Automated Upgrades
        Enhanced Read Scalability
        Redundancy Zones
        Namespaces
        Resource Quotas
        Preemption
        Audit Logging
        Setinel Policies
```

```shell-session
$ nomad license get -stale=true

Product        = nomad
License Status = valid
License ID     = 8c647f6c-1e6d-18d8-7f05-92c4d8110b2d
Customer ID    = 350356e5-8aec-bdf4-8510-b205079ccad2
Issued At      = 2021-03-31 14:21:16.969610774 +0000 UTC
Expires At     = 2022-04-01 00:00:00 +0000 UTC
Terminates At  = 2022-04-04 00:00:00 +0000 UTC
Datacenter     = *
Modules:
        governance-policy
        multicluster-and-efficiency
Licensed Features:
        Automated Upgrades
        Enhanced Read Scalability
        Redundancy Zones
        Namespaces
        Resource Quotas
        Audit Logging
        Sentinel Policies
        Multiregion Deployments
        Automated Backups
        Multi-Vault Namespaces
```
